--- a/staticfiles/styles/style.css
+++ b/staticfiles/styles/style.css
@@ -13,6 +13,11 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  background: #f5f5f5;
+  color: #18314f;
+}
+
 .not-found {
   position: absolute;
   top: 50%;
@@ -53,35 +58,27 @@ html {
   background-size: cover;
   background-image: url('/static/uploads/images/bg.jpg');
   background-position: center;
-  background-attachment: fixed;
+  background-attachment: fixed !important;
   overflow: hidden;
-  object-fit: cover;
-  -webkit-background-size: cover;
 }
 
-@media only screen and (max-width: 568px) {
+@media (max-width: 568px) {
   .banner{
     width: 100%;
     height: 110vh;
     background-image: url('/static/uploads/images/bg.jpg');
+    background-attachment: fixed !important;
     overflow: hidden;
-    object-fit: cover;
-    background-attachment: fixed;
-    -webkit-background-attachment: fixed;
-    -webkit-background-size: cover;
-    background-size: cover;
   }
 }
 
 .title-card .container{
   padding: 8px 0px;
+  background-size: cover;
   background-image: url('/static/uploads/images/bg.jpg');
   background-position: center;
   background-attachment: fixed;
   border-radius: 5px;
-  object-fit: cover;
-  -webkit-background-size: cover;
-  background-size: cover;
 }
 
 .title-card{
@@ -136,6 +133,8 @@ html {
 
 /* NAVBAR STYLING START */
 .logo img{
+  width: 100%;
+  height: 100%;
   max-width: 100px;
   object-fit: cover;
 }
@@ -215,9 +214,10 @@ html {
 }
 
 /* unless the screen width is at least ...px, do not display */
-@media only screen and (max-width: 568px) {
+@media (max-width: 568px) {
   .logo img{
     width: 100%;
+    height: 100%;
     max-width: 80px;
     object-fit: cover;
   }
