--- a/cryptoden/templates/cryptoden/index.html
+++ b/cryptoden/templates/cryptoden/index.html
@@ -14,110 +14,127 @@
     <title>CryptoDen</title>
 </head>
 <body>
-    <section class="container">
-        <div class="row text-center">
-            <div class="col-md">
-                <div class="p-4">
-                    <h2>CryptoDen</h2>
-                </div>
-            </div>
-        </div>
-        <div class="card-c">
-            <div class="row">
+    <div class="pattern">
+        <div class="container">
+            <div class="row text-center">
                 <div class="col-md">
-                    <div class="m-3">
-                        <h3>Options</h3>
+                    <div class="p-4">
+                        <h2>CryptoDen</h2>
                     </div>
                 </div>
             </div>
-            <hr>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-4">
-                            <div class="settings d-flex flex-column p-4">
-                                <label for="operation-select">Operation</label>
-                                <label for="cipher-select">Cipher</label>
-                            </div>
-                        </div>
-                        <div class="col-8">
-                            <div class="settings d-flex flex-column p-4">
-                                <select id="operation-select" onchange="updateCiphers(); updateOperationDescription(); updateCipherDescription();">
-                                    {% for operation in operations %}
-                                        <option value="{{ operation.id }}">{{ operation.name }}</option>
-                                    {% endfor %}
-                                </select>
-                                <select id="cipher-select" onchange="updateCipherDescription();">
-                                    <option value="">Select Operation First</option>
-                                </select>
-                            </div>
+            <div class="card-c">
+                <div class="row">
+                    <div class="col-md">
+                        <div class="m-3">
+                            <h3>Options</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="p-4">
-                                <label for="">Keys</label>
+                <hr>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="settings d-flex flex-column p-4">
+                                    <label for="operation-select">Method</label>
+                                    <label for="cipher-select">Cipher</label>
+                                </div>
+                            </div>
+                            <div class="col-8">
+                                <div class="settings d-flex flex-column p-4">
+                                    <select id="operation-select" onchange="updateCiphers(); updateOperationDescription(); updateCipherDescription();">
+                                        {% for operation in operations %}
+                                            <option value="{{ operation.id }}">{{ operation.name }}</option>
+                                        {% endfor %}
+                                    </select>
+                                    <select id="cipher-select" onchange="updateCipherDescription();">
+                                        <option value="">Select Operation First</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-2">
-                            <div class="keys p-4">
-                                <div id="key-caesar" style="display:block;">
-                                    <input type="number" id="caesar-key" placeholder="Enter the shift value" oninput="validateInput(this)">
+                    </div>
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-3">
+                                <div class="p-4">
+                                    <label for="">Keys</label>
+                                </div>
+                            </div>
+                            <div class="col-2">
+                                <div class="keys p-4">
+                                    <div id="key-caesar" style="display:block;">
+                                        <input type="number" id="caesar-key" placeholder="Enter the shift value" oninput="validateInput(this)">
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="m-4">
+                <div class="m-4">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <div class="p-text form-floating">
+                                <textarea class="form-control" placeholder="Type your plaintext here" id="plainTextarea" style="height: 100%"></textarea>
+                                <label for="plainTextarea">Plaintext</label>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="ed-btns d-flex align-items-center">
+                                <button type="button" class="btn btn-light p-2 m-2">Encrypt</button>
+                                <button type="button" class="btn btn-light p-2 m-2">Decrypt</button>
+                                <button type="button" class="btn btn-light p-1 m-4">Clear</button>
+                            </div>
+                        </div>
+                        <div class="col-md-5">
+                            <div class="c-text form-floating">
+                                <textarea class="form-control" placeholder="Type your ciphertext here" id="cipherTextarea" style="height: 100%"></textarea>
+                                <label for="cipherTextarea">Encrypted Text</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
                 <div class="row">
-                    <div class="col-md-5">
-                        <div class="p-text form-floating">
-                            <textarea class="form-control" placeholder="Type your plaintext here" id="plainTextarea" style="height: 100%"></textarea>
-                            <label for="plainTextarea">Plaintext</label>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="d-flex flex-column">
-                            <button type="button" class="btn btn-light">Encrypt</button>
-                            <button type="button" class="btn btn-light">Decrypt</button>
-                            <button type="button" class="btn btn-light">Clear</button>
-                        </div>
-                    </div>
-                    <div class="col-md-5">
-                        <div class="c-text form-floating">
-                            <textarea class="form-control" placeholder="Type your ciphertext here" id="cipherTextarea" style="height: 100%"></textarea>
-                            <label for="cipherTextarea">Encrypted Text</label>
+                    <div class="col-md">
+                        <div class="m-3">
+                            <h3>Description</h3>
                         </div>
                     </div>
                 </div>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col-md">
-                    <div class="m-3">
-                        <h3>Description</h3>
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col-md">
-                    <div class="p-4">
-                        <p id="operation-desc">"op-desc"</p>
-                    </div>
-                    <div class="text-center">
-                        <h6>Implementation</h6>
-                    </div>
-                    <div class="p-4">
-                        <p id="cipher-desc">"ci-desc"</p>
+                <hr>
+                <div class="row">
+                    <div class="col-md">
+                        <div class="p-4">
+                            <p id="operation-desc">"op-desc"</p>
+                        </div>
+                        <div class="text-center">
+                            <h6>Implementation</h6>
+                        </div>
+                        <div class="p-4">
+                            <p id="cipher-desc">"ci-desc"</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md p-4">
+                    <div class="social-list">
+                        <a href="" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                        <a href="" target="_blank"><i class="fa-brands fa-square-github fa-2xl"></i></a>
+                    </div>
+                    <div class="copyright-row">
+                        <p>Copyright ©{% now 'Y' %} All rights reserved. Designed by <a href="#" target="">MSREZAIE</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 <script>
     function validateInput(input) {
