--- a/staticfiles/styles/cryptoden-style.css
+++ b/staticfiles/styles/cryptoden-style.css
@@ -26,7 +26,6 @@ hr{
 .card-c {
   background: white;
   box-shadow: 0 0 2px rgba(0,0,0,.5);
-  min-height: 85%;
   border-radius: 5px;
 }
 
@@ -42,4 +41,20 @@ hr{
 .settings select{
   width: 100%;
   max-width: 200px;
+}
+
+.ed-btns{
+  flex-direction: column;
+}
+
+.ed-btns button{
+  padding: 0;
+  font-size: 14px;
+  border-color: rgb(200, 200, 200);
+}
+
+@media (max-width: 568px) {
+  .ed-btns{
+    flex-direction: row;
+  }
 }
