--- a/cryptoden/templates/cryptoden/index.html
+++ b/cryptoden/templates/cryptoden/index.html
@@ -14,7 +14,7 @@
     <title>CryptoDen</title>
 </head>
 <body>
-    <div class="pattern">
+    <div class="pattern" style="background-image: url('{{ pages.background.url }}'); background-size: contain;">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md">
@@ -123,13 +123,11 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md p-4">
-                    <div class="social-list">
+                <div class="col-md">
+                    <div class="m-4">
                         <a href="" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
                         <a href="" target="_blank"><i class="fa-brands fa-square-github fa-2xl"></i></a>
-                    </div>
-                    <div class="copyright-row">
-                        <p>Copyright ©{% now 'Y' %} All rights reserved. Designed by <a href="#" target="">MSREZAIE</a></p>
+                        <p class="mt-3">Copyright ©{% now 'Y' %} All rights reserved. Designed by <a href="#" target="">MSREZAIE</a></p>
                     </div>
                 </div>
             </div>
