--- a/staticfiles/styles/cryptoden-style.css
+++ b/staticfiles/styles/cryptoden-style.css
@@ -15,12 +15,18 @@ html {
 
 body {
   background: #f5f5f5;
-  color: #18314f;
 }
 
 hr{
   margin-top: 0;
   margin-bottom: 0;
+}
+
+.pattern{
+  margin-top: 1%;
+  margin-left: 1%;
+  margin-right: 1%;
+  padding-bottom: 2%;
 }
 
 .card-c {
@@ -50,7 +56,7 @@ hr{
 .ed-btns button{
   padding: 0;
   font-size: 14px;
-  border-color: rgb(200, 200, 200);
+  border-color: rgba(200,200,200,1);
 }
 
 @media (max-width: 568px) {
