Removed static bg url from css
Background image was being loaded statically from the directory, now the url of bg is taken from the model and the image is saved on S3 bucket

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -4,7 +4,7 @@
 
 {% block banner-profile %}
 
-<div class="banner">
+<div class="banner" style="background-image: url('{{ page.landing_page_background.url }}');">
     <div class="profile">
         <div class="row">
             <div class="container">
@@ -35,7 +35,7 @@
 
 <div id="scroll-to-projects">
     <div class="title-card">
-        <div class="container">
+        <div class="container" style="background-image: url('{{ page.landing_page_background.url }}');">
             <div class="title-card-banner">
                 <h3>PROJECTS</h3>
             </div>
@@ -84,7 +84,7 @@
 {% block about %}
 
 <div class="title-card">
-    <div class="container">
+    <div class="container" style="background-image: url('{{ page.landing_page_background.url }}');">
         <div class="title-card-banner">
             <h3>ABOUT ME</h3>
         </div>
@@ -158,7 +158,7 @@
 
 <div id="scroll-to-contact">
     <div class="title-card">
-        <div class="container">
+        <div class="container" style="background-image: url('{{ page.landing_page_background.url }}');">
             <div class="title-card-banner">
                 <h3>CONTACT</h3>
             </div>
