--- a/staticfiles/styles/style.css
+++ b/staticfiles/styles/style.css
@@ -14,8 +14,7 @@ html {
 }
 
 body {
-  background: #f5f5f5;
-  color: #18314f;
+  background-color: #f5f5f5;
 }
 
 .not-found {
@@ -55,19 +54,16 @@ body {
 .banner{
   width: 100%;
   height: 100vh;
-  background-size: cover;
-  background-image: url('/static/uploads/images/bg.jpg');
-  background-position: center;
-  background-attachment: fixed !important;
   overflow: hidden;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 @media (max-width: 568px) {
   .banner{
     width: 100%;
     height: 110vh;
-    background-image: url('/static/uploads/images/bg.jpg');
-    background-attachment: fixed !important;
     overflow: hidden;
   }
 }
@@ -75,7 +71,6 @@ body {
 .title-card .container{
   padding: 8px 0px;
   background-size: cover;
-  background-image: url('/static/uploads/images/bg.jpg');
   background-position: center;
   background-attachment: fixed;
   border-radius: 5px;
@@ -129,6 +124,7 @@ body {
   padding: 5px 10px;
   margin-bottom: 5px;
 }
+
 /* UNIVERSAL STYLING */
 
 /* NAVBAR STYLING START */
