--- a/cryptoden/templates/cryptoden/index.html
+++ b/cryptoden/templates/cryptoden/index.html
@@ -14,7 +14,7 @@
     <title>CryptoDen</title>
 </head>
 <body>
-    <div class="pattern" style="background-image: url('{{ pages.background.url }}'); background-size: contain;">
+    <div class="pattern" style="background-image: url('{{ pages.background.url }}');">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md">
@@ -48,7 +48,7 @@
                                             <option value="{{ operation.id }}">{{ operation.name }}</option>
                                         {% endfor %}
                                     </select>
-                                    <select id="cipher-select" onchange="updateCipherDescription();">
+                                    <select id="cipher-select" onchange="updateCipherDescription(); updateCipherKey();">
                                         <option value="">Select Operation First</option>
                                     </select>
                                 </div>
@@ -64,14 +64,18 @@
                             </div>
                             <div class="col-2">
                                 <div class="keys p-4">
-                                    <div id="key-caesar" style="display:block;">
+                                    <div id="key-caesar" style="display:none;">
                                         <input type="number" id="caesar-key" placeholder="Enter the shift value" oninput="validateInput(this)">
+                                    </div>
+                                    <div id="no-key" style="display:block;">
+                                        <input disabled placeholder="No Key Required">
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <hr>
                 <div class="m-4">
                     <div class="row">
                         <div class="col-md-5">
@@ -110,7 +114,7 @@
                             <p id="operation-desc">"op-desc"</p>
                         </div>
                         <div class="text-center">
-                            <h6>Implementation</h6>
+                            <h5>Implementation</h5>
                         </div>
                         <div class="p-4">
                             <p id="cipher-desc">"ci-desc"</p>
@@ -124,10 +128,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md">
-                    <div class="m-4">
-                        <a href="" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-                        <a href="" target="_blank"><i class="fa-brands fa-square-github fa-2xl"></i></a>
-                        <p class="mt-3">Copyright ©{% now 'Y' %} All rights reserved. Designed by <a href="#" target="">MSREZAIE</a></p>
+                    <div class="social-list m-4">
+                        <a href="{{profile.social_linkedin}}" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                        <a href="{{profile.social_github}}" target="_blank"><i class="fa-brands fa-square-github fa-2xl"></i></a>
+                        <p class="mt-3">Copyright ©{% now 'Y' %} All rights reserved. Designed by <span>MSREZAIE</span></a>
                     </div>
                 </div>
             </div>
@@ -135,12 +139,6 @@
     </footer>
 </body>
 <script>
-    function validateInput(input) {
-        if (input.value > 25) {
-            input.value = 25;
-        }
-    }
-
     var operations = {
         {% for operation in operations %}
         {{ operation.id }}: [
@@ -165,10 +163,11 @@
         {% endfor %}
     };
 
+    var cipherSelect = document.getElementById("cipher-select");
+
     function updateCiphers() {
         var operationId = document.getElementById("operation-select").value;
         var ciphers = operations[operationId];
-        var cipherSelect = document.getElementById("cipher-select");
     
         cipherSelect.innerHTML = "";
         if (ciphers) {
@@ -192,11 +191,20 @@
         var cipherName = document.getElementById("cipher-select").value;
         var cipherDesc = document.getElementById("cipher-desc");
         var desc = cipherDescs[cipherName];
-
+        
         cipherDesc.innerHTML = desc;
     }
 
-    {% comment %} Run on start: {% endcomment %}
+    function updateCipherKey() {
+
+    }
+
+    function validateInput(input) {
+        if (input.value > 25) {
+            input.value = 25;
+        }
+    }
+
     updateCiphers();
     updateOperationDescription();
     updateCipherDescription();
