implemented caeser encrypt part
used ajax to dynamically send inputted data to backend and encrypt using ciphers implemented with python, key input fields are shown and hidden based on the selected cipher

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,7 +8,7 @@
                 <a href="{{profile.social_github}}" target="_blank"><i class="fa-brands fa-square-github fa-2xl"></i></a>
             </div>
             <div class="copyright-row">
-                <p>Copyright ©{% now 'Y' %} All rights reserved. Designed by <a href="#" target="">MSREZAIE</a></p>
+                <p>Copyright ©{% now 'Y' %} All rights reserved. Developed by <a href="#">MSREZAIE</a></p>
             </div>
         </div>
     </div>
