--- a/cryptoden/templates/cryptoden/index.html
+++ b/cryptoden/templates/cryptoden/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'styles/cryptoden-style.css' %}">
     <link rel="shortcut icon" type="image/x-icon" href="">
-    <title>CryptoDen</title>
+    <title>Textual Cryptography</title>
 </head>
 <body>
     <div class="pattern" style="background-image: url('{{ pages.background.url }}');">
@@ -19,7 +19,7 @@
             <div class="row text-center">
                 <div class="col-md">
                     <div class="p-4">
-                        <h2>CryptoDen</h2>
+                        <h1>Textual Cryptography</h1>
                     </div>
                 </div>
             </div>
@@ -43,9 +43,12 @@
                             </div>
                             <div class="col-8">
                                 <div class="settings d-flex flex-column p-4">
-                                    <select id="operation-select" onchange="updateCiphers(); updateOperationDescription(); updateCipherDescription();">
+                                    <select id="operation-select" onchange="updateCiphers(); updateOperationDescription(); updateCipherDescription(); updateCipherKey();">
                                         {% for operation in operations %}
-                                            <option value="{{ operation.id }}">{{ operation.name }}</option>
+                                        {% comment %} temporary: to only show the first method of cipher operation {% endcomment %}
+                                            {% if forloop.first %}
+                                                <option value="{{ operation.id }}">{{ operation.name }}</option>
+                                            {% endif %}
                                         {% endfor %}
                                     </select>
                                     <select id="cipher-select" onchange="updateCipherDescription(); updateCipherKey();">
@@ -64,11 +67,11 @@
                             </div>
                             <div class="col-2">
                                 <div class="keys p-4">
-                                    <div id="key-caesar" style="display:none;">
-                                        <input type="number" id="caesar-key" placeholder="Enter the shift value" oninput="validateInput(this)">
-                                    </div>
-                                    <div id="no-key" style="display:block;">
+                                    <div id="key-none" style="display: none;">
                                         <input disabled placeholder="No Key Required">
+                                    </div>
+                                    <div id="key-caesar" style="display: none;">
+                                        <input id="caesar-key" type="number" pattern="\d{2}" title="Only 2 digits allowed" placeholder="i.e. 1-25" oninput="validateInput(this)">
                                     </div>
                                 </div>
                             </div>
@@ -86,9 +89,9 @@
                         </div>
                         <div class="col-md-2">
                             <div class="ed-btns d-flex align-items-center">
-                                <button type="button" class="btn btn-light p-2 m-2">Encrypt</button>
-                                <button type="button" class="btn btn-light p-2 m-2">Decrypt</button>
-                                <button type="button" class="btn btn-light p-1 m-4">Clear</button>
+                                <button id="encryptBtn" class="btn btn-light p-2 m-2">Encrypt</button>
+                                <button class="btn btn-light p-2 m-2">Decrypt</button>
+                                <button class="btn btn-light p-1 m-4">Clear</button>
                             </div>
                         </div>
                         <div class="col-md-5">
@@ -131,7 +134,7 @@
                     <div class="social-list m-4">
                         <a href="{{profile.social_linkedin}}" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
                         <a href="{{profile.social_github}}" target="_blank"><i class="fa-brands fa-square-github fa-2xl"></i></a>
-                        <p class="mt-3">Copyright ©{% now 'Y' %} All rights reserved. Designed by <span>MSREZAIE</span></a>
+                        <p class="mt-3">Copyright ©{% now 'Y' %} All rights reserved. Developed by <a href="https://msrezaie.pythonanywhere.com/" target="_blank">MSREZAIE</a></a>
                     </div>
                 </div>
             </div>
@@ -195,8 +198,21 @@
         cipherDesc.innerHTML = desc;
     }
 
-    function updateCipherKey() {
+    var cipherKeyMap = {
+        "Caesar": "key-caesar",
+        "Atbash": "key-none",
+    };
 
+    function updateCipherKey() {
+        var selectedCipher = cipherSelect.value;
+        var selectedCipherKeyDiv = cipherKeyMap[selectedCipher];
+        var keyInputDiv = document.querySelectorAll(".keys div");
+
+        for (var i = 0; i < keyInputDiv.length; i++) {
+            keyInputDiv[i].style.display = "none";
+        }
+        
+        document.getElementById(selectedCipherKeyDiv).style.display = "block";
     }
 
     function validateInput(input) {
@@ -205,8 +221,28 @@
         }
     }
 
+    function encrypt() {
+        let plainText = document.getElementById("plainTextarea").value;
+        let caesarKey = document.getElementById("caesar-key").value;
+
+        // send the input to the views.py using AJAX
+        const xhr = new XMLHttpRequest();
+        xhr.open("POST", window.location.href, true);
+        xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+        xhr.onreadystatechange = function() {
+            if (this.readyState === XMLHttpRequest.DONE && this.status === 200) {
+            // get the response and display it in the cipherTextarea
+                document.getElementById("cipherTextarea").value = this.responseText;
+            }
+        };
+        xhr.send(`plainText=${plainText}&caesarKey=${caesarKey}`);
+    }
+    
+    document.getElementById("encryptBtn").addEventListener("click", encrypt);
+
     updateCiphers();
     updateOperationDescription();
     updateCipherDescription();
+    updateCipherKey();
 </script>
 </html>
