--- a/cryptoden/templates/cryptoden/index.html
+++ b/cryptoden/templates/cryptoden/index.html
@@ -145,7 +145,7 @@
     </footer>
 </body>
 <script type="text/javascript">
-    var operations = {
+    var ciphers = {
         {% for operation in operations %}
         {{ operation.id }}: [
             {% for cipher in operation.cipher.all %}
