--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -52,11 +52,15 @@
                                 <h4 class="card-title">{{project.title}}</h4>
                                 <p class="card-text">{{project.short_description}}</p>
                                 <div class="project-tags">
-                                    {% for tag in project.tags.all %}
-                                    <div style="margin: 0 2px;" class="tag-pill">
-                                        <h6>{{tag}}</h6>
+                                    <div class="row gy-2">
+                                        {% for tag in project.tags.all %}
+                                            <div style="white-space: nowrap; width: 4.5em" class="col-2">
+                                                <div class="tag-pill">
+                                                    <h6>{{tag}}</h6>
+                                                </div>
+                                            </div>
+                                        {% endfor %}
                                     </div>
-                                    {% endfor %}
                                 </div>
                             </div>
                             <div class="card-btns">
