--- a/cryptoden/templates/cryptoden/index.html
+++ b/cryptoden/templates/cryptoden/index.html
@@ -44,7 +44,7 @@
                                 <div class="settings d-flex flex-column p-4">
                                     <select id="operation-select" onchange="updateCiphers(); updateOperationDescription(); updateCipherDescription(); updateCipherKey();">
                                         {% for operation in operations %}
-                                            {% if operation.name != "Combination" %}
+                                            {% if operation.name != "Combination" and operation.name != "Block" %}
                                                 <option value="{{ operation.id }}">{{ operation.name }}</option>
                                             {% endif %}
                                         {% endfor %}
