--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -4,10 +4,10 @@
 
 {% block banner-profile %}
 
-<div class="banner" style="background-image: url('{{ page.landing_page_background.url }}');">
-    <div class="profile">
-        <div class="row">
-            <div class="container">
+<div class="banner">
+    <div class="banner-background d-flex align-items-center justify-content-center" style="background-image: url('{{ page.landing_page_background.url }}');">
+        <div class="row-md">
+            <div class="col-lg">
                 <div class="profile-card">
                     <div class="img1"><img src="{{profile.profile_background.url}}" alt=""></div>
                     <div class="img2"><img src="{{profile.profile_image.url}}" alt=""></div>
