--- a/staticfiles/styles/style.css
+++ b/staticfiles/styles/style.css
@@ -59,6 +59,13 @@ body {
   border-radius: 5px;
 }
 
+@supports (-webkit-touch-callout: none) {
+  .title-card .container{
+    background-attachment: scroll;
+    background-position: center;
+  }
+}
+
 .title-card{
   padding-top: 50px;
   padding-left: auto;
@@ -109,6 +116,7 @@ body {
   width: 100%;
   height: 100%;
   max-width: 100px;
+  max-height: 50px;
   object-fit: cover;
 }
 
@@ -268,6 +276,15 @@ body {
   background-attachment: fixed;
 }
 
+@supports (-webkit-touch-callout: none) {
+  .banner-background{
+    height: 100vh;
+    overflow: hidden;
+    background-attachment: scroll;
+    background-position: center;
+  }
+}
+
 .profile-card{
   background-color: white;
   width: 380px;
@@ -369,7 +386,7 @@ body {
 
 @media (max-height: 480px) {
   .profile-card{
-    width: 390px;
+    width: 360px;
     height: 360px;
   }
   
