Added notice for non-printable characters

--- a/cryptoden/templates/cryptoden/index.html
+++ b/cryptoden/templates/cryptoden/index.html
@@ -80,6 +80,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <label id="non-printable" for="keys">Note: Non-printable characters will be replaced with </label>
                         </div>
                     </div>
                 </div>
