affine cipher fully functional
decryption part for affine is implemented

--- a/cryptoden/templates/cryptoden/index.html
+++ b/cryptoden/templates/cryptoden/index.html
@@ -72,8 +72,8 @@
                                         <input id="caesar" type="number" placeholder="i.e. 1-25" oninput="caesarValidateInput(this)">
                                     </div>
                                     <div id="key-affine" style="display: none;">
-                                        <input id="a" type="number" placeholder="Not 13 or Even No." oninput="affineValidateInput(this)">
-                                        <input id="b" type="number" placeholder="Any Number" oninput="affineValidateInput(this)">
+                                        <input id="a" type="number" placeholder="Not 13 or an even no." oninput="affineValidateInput(this)">
+                                        <input id="b" type="number" placeholder="Any number" oninput="affineValidateInput(this)">
                                     </div>
                                     <div id="key-columnar" style="display: none;">
                                         <input id="columnar" type="text" placeholder="any character/number">
