Vigenere cipher implemented

--- a/cryptoden/templates/cryptoden/index.html
+++ b/cryptoden/templates/cryptoden/index.html
@@ -75,15 +75,15 @@
                                         <input id="a" type="number" placeholder="Not 13 or an even no." oninput="affineValidateInput(this)">
                                         <input id="b" type="number" placeholder="Any number" oninput="affineValidateInput(this)">
                                     </div>
-                                    <div id="key-columnar" style="display: none;">
-                                        <input id="columnar" type="text" placeholder="any character/number">
+                                    <div id="key-vigenere" style="display: none;">
+                                        <input id="vigenere" type="text" placeholder="any character/number">
                                     </div>
                                     <div id="key-xor" style="display: none;">
                                         <input id="xor" type="number" placeholder="i.e. 0-127" oninput="xorValidateInput(this)">
                                     </div>
                                 </div>
                             </div>
-                            <label id="non-printable" for="keys">Note: Non-printable characters will be replaced with </label>
+                            <label id="non-printable" for="keys">Note: Non-printable characters will be replaced with ☒</label>
                         </div>
                     </div>
                 </div>
