check input bug fix
fixed a bug where if a cipher with more than 1 key input was required, the encrypt/decrypt button would become active with just 1 key entered, now all the required keys must be entered for the buttons to be activated

--- a/cryptoden/templates/cryptoden/index.html
+++ b/cryptoden/templates/cryptoden/index.html
@@ -76,7 +76,7 @@
                                         <input id="b" type="number" placeholder="Any number" oninput="affineValidateInput(this)">
                                     </div>
                                     <div id="key-vigenere" style="display: none;">
-                                        <input id="vigenere" type="text" placeholder="Any Character/Number">
+                                        <input id="vigenere" type="text" placeholder="Any Character">
                                     </div>
                                     <div id="key-foursquare" style="display: none;">
                                         <input id="key-1" type="text" placeholder="Any Character" oninput="">
