--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -12,7 +12,7 @@
                     <div class="img1"><img src="{{profile.profile_background.url}}" alt=""></div>
                     <div class="img2"><img src="{{profile.profile_image.url}}" alt=""></div>
                     <div class="profile-name"><h2>Hey, I am {{profile.full_name}}</h2></div>
-                    <div class="profile-title">{{profile.short_bio}}</div>
+                    <div class="profile-title">{{profile.profile_card_bio}}</div>
                     <div class="profile-location">Based in {{profile.location}}</div>
                     <div class="profile-socials">
                         {% if profile.social_linkedin %}
