initial authentication functionality
added initial logic for a user login and authentication

--- a/cryptoden/templates/cryptoden/user_login.html
+++ b/cryptoden/templates/cryptoden/user_login.html
@@ -11,7 +11,14 @@
                 </div>
             </div>
             <div class="card-c">
-                
+                <div class="login-form">
+                    <form action="{% url 'cryptoden:crypto-login' %}" method="POST">
+                        {% csrf_token %}
+                        <input type="text" name="username">
+                        <input type="password" name="password">
+                        <input type="submit" value="Login">
+                    </form>
+                </div>
             </div>
         </div>
     </div>
