integrated user login
 cryptoden users now have the option of sign in in order to save their encryption/decryption history to their accounts

--- a/cryptoden/templates/cryptoden/login_register.html
+++ b/cryptoden/templates/cryptoden/login_register.html
@@ -11,14 +11,31 @@
                 </div>
             </div>
             <div class="card-c">
+                {% if form_type == 'login' %}
                 <div class="login-form">
+                    <h2>Login</h2>
                     <form action="{% url 'cryptoden:crypto-login' %}" method="POST">
                         {% csrf_token %}
                         <input type="text" name="username">
                         <input type="password" name="password">
                         <input type="submit" value="Login">
+                        <p>First time user? <a href="{% url 'cryptoden:crypto-register' %}">Sign Up</a></p>
                     </form>
                 </div>
+                {% else %}
+                <div class="register-form">
+                    <h2>Sign Up</h2>
+                    <form action="{% url 'cryptoden:crypto-login' %}" method="POST">
+                        {% csrf_token %}
+                        <input type="text" name="name">
+                        <input type="email" name="email">
+                        <input type="text" name="username">
+                        <input type="password" name="password">
+                        <input type="submit" value="Submit">
+                        <p>Already registered? <a href="{% url 'cryptoden:crypto-login' %}">Login</a></p>
+                    </form>
+                </div>
+                {% endif %}
             </div>
         </div>
     </div>
