--- a/cryptoden/templates/cryptoden/index.html
+++ b/cryptoden/templates/cryptoden/index.html
@@ -24,12 +24,18 @@
                     </div>
                     <div class="col-4">
                         <div class="m-4">
+                            {% if not request.user.is_authenticated %}
                             <p>Login to save your usage history</p>
+                            {% endif %}
                         </div>
                     </div>
                     <div class="col-2">
                         <div class="m-3">
-                            <a class="btn btn-light" href="{% url 'cryptoden:crypto-logout' %}">Login</a>
+                            {% if request.user.is_authenticated %}
+                            <a class="btn btn-light" href="{% url 'cryptoden:crypto-logout' %}">Logout</a>
+                            {% else %}
+                            <a class="btn btn-light" href="{% url 'cryptoden:crypto-login' %}">Login</a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
