--- a/cryptoden/templates/cryptoden/index.html
+++ b/cryptoden/templates/cryptoden/index.html
@@ -25,7 +25,7 @@
                     <div class="col-4">
                         <div class="m-4">
                             {% if not request.user.is_authenticated %}
-                            <p>Login to save your usage history</p>
+                            <p>Sign in to save your usage history</p>
                             {% endif %}
                         </div>
                     </div>
@@ -34,7 +34,7 @@
                             {% if request.user.is_authenticated %}
                             <a class="btn btn-light" href="{% url 'cryptoden:crypto-logout' %}">Logout</a>
                             {% else %}
-                            <a class="btn btn-light" href="{% url 'cryptoden:crypto-login' %}">Login</a>
+                            <a class="btn btn-light" href="{% url 'cryptoden:crypto-signin' %}">Sign in</a>
                             {% endif %}
                         </div>
                     </div>
