--- a/staticfiles/styles/cryptoden-style.css
+++ b/staticfiles/styles/cryptoden-style.css
@@ -22,19 +22,167 @@ hr{
   margin-bottom: 0;
 }
 
-.pattern{
-  margin-top: 1%;
-  margin-left: 1%;
-  margin-right: 1%;
-  padding-bottom: 2%;
-  background-size: contain;
-}
 
 h1, h3, h5{
   font-weight: 600;
 }
 
-.card-c {
+a{
+  color: #424242;
+}
+
+/* NAVBAR STYLING START */
+.navbar{
+  margin-top: 1%;
+  margin-left: 1%;
+  margin-right: 1%;
+  background-color: #fafdff;
+  padding: 10px 10px;
+  transition: all 0.4s ease;
+  border-bottom: 1px solid #a8aaab;
+}
+
+.logo h2{
+  color: black;
+  font-weight: 600;
+}
+
+.nav-item{
+  cursor: pointer;
+}
+
+.signupBtn {
+  color: #14133d;
+}
+
+.navbar.sticky{
+  background-color: #14133d;
+  padding: 5px 20px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.navbar.sticky .menu-list .nav-item{
+  box-shadow: none;
+}
+
+.navbar.sticky li a{
+  color: white;
+}
+
+.navbar.sticky .logo a{
+  color: white;
+}
+
+.menu-list li{
+  padding: 0px 10px;
+}
+
+.menu-list li a{
+  color: black;
+  font-size: 18px;
+  font-weight: 400;
+}
+  
+.menu-list li a:hover{
+  color: silver;
+}
+
+.navbar .logo a{
+  color: white;
+  font-size: 28px;
+  font-weight: 500;
+}
+
+.icon{
+  font-size: 20px;
+  cursor: pointer;
+  display: none;
+}
+
+.navbar.sticky .icon{
+  color: white;
+}
+
+.icon.cancel-btn{
+  position: absolute;
+  right: 30px;
+  top: 20px;
+}
+
+@media (max-width: 568px) {
+  .navbar .menu-list{
+    position: fixed;
+    top: -0.1%;
+    right: -100%;
+    width: 100%;
+    max-width: 160px;
+    max-height: 110px;
+    display: block;
+    padding: 15px 0;
+    text-align: center;
+    background-color: #14133d;
+    transition: all 0.2s ease;
+  }
+
+  .menu-list .nav-item{
+    border-radius: none;
+    box-shadow: none;
+  }
+
+  .icon{
+    color: white;
+    display: block;
+  }
+
+  .icon.hide{
+    display: none;
+  }
+
+  .navbar.active{
+    background-color: #14133d;
+    transition: all 0.2s ease;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  }
+
+  .navbar.active .icon{
+    color: white;
+  }
+
+  .navbar.active .logo a{
+    color: white;
+  }
+
+  .navbar .menu-list.active{
+    right: 0%;
+  }
+
+  .navbar .menu-list li{
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+  }
+
+  .navbar .menu-list li a{
+    color: white;
+    margin-left: 0px;
+    font-size: 16px;
+  }
+  
+  .menu-list li a:hover{
+    color: silver;
+  }
+}
+/* NAVBAR STYLING END */
+
+/* Main-page STYLING */
+.pattern-main{
+  margin-left: 1%;
+  margin-right: 1%;
+  padding-bottom: 2%;
+  background-size: cover;
+}
+
+.card-main {
   background: white;
   box-shadow: 0 0 2px rgba(0,0,0,.5);
   border-radius: 5px;
@@ -61,6 +209,9 @@ h1, h3, h5{
 .ed-btns button{
   padding: 0;
   font-size: 14px;
+}
+
+.btn{
   border-color: rgba(200,200,200,1);
 }
 
@@ -70,11 +221,39 @@ h1, h3, h5{
   }
 }
 
-a{
-  color: #424242;
-}
-
 #non-printable{
   padding: 10px 40px;
   font-size: 14px;
 }
+/* Main-page STYLING END */
+
+/* Signin page STYLING */
+.pattern-signin{
+  height: 75vh;
+  margin-left: 1%;
+  margin-right: 1%;
+  padding-bottom: 2%;
+  background-size: cover;
+}
+
+.card-signin{
+  margin-top: 10%;
+  max-width: 50vh;
+  margin-left: auto;
+  margin-right: auto;
+  background: white;
+  box-shadow: 0 0 2px rgba(0,0,0,.5);
+  border-radius: 5px;
+}
+
+.card-register{
+  margin-top: 5%;
+  max-width: 50vh;
+  margin-left: auto;
+  margin-right: auto;
+  background: white;
+  box-shadow: 0 0 2px rgba(0,0,0,.5);
+  border-radius: 5px;
+}
+
+/* Signin page STYLING END */
